navbar layout bug

--- a/src/molecules/NavBar.css
+++ b/src/molecules/NavBar.css
@@ -5,6 +5,8 @@
 
 .mobile-nav-container {
   width: 100%;
+  position: fixed;
+  z-index: 100;
 }
 
 .web-nav-container {
